--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,25 +6,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #7d30a1;
+  --ifm-color-primary-dark: #702b91;
+  --ifm-color-primary-darker: #6a2989;
+  --ifm-color-primary-darkest: #582271;
+  --ifm-color-primary-light: #8a35b1;
+  --ifm-color-primary-lighter: #9037b9;
+  --ifm-color-primary-lightest: #9f47c8;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #ecb8ff;
+  --ifm-color-primary-dark: #e08cff;
+  --ifm-color-primary-darker: #da76ff;
+  --ifm-color-primary-darkest: #c934ff;
+  --ifm-color-primary-light: #f8e4ff;
+  --ifm-color-primary-lighter: #fefaff;
+  --ifm-color-primary-lightest: #ffffff;
+  --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
